--- a/index.html
+++ b/index.html
@@ -2,11 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PreEntrega 1 - Enzo Fernandez Sad</title>
+    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    Hola Mundo!
-    <script src="./main.js"></script>
+<div class="row">
+    <div class="col-12 col-sm-6">
+        <input type="text" class="form-control mb-3" autocomplete="off" id="buscarProducto" placeholder="Ingrese nombre de producto" />
+    </div>
+
+    <div class="col-12 col-sm-6">
+        <select class="form-control" id="selectOrden">
+            <option value="">Seleccionar órden</option>
+            <option value="precio">Precio</option>
+            <option value="nombre">Nombre</option>
+        </select>
+    </div>
+</div>
+<div class="row" id="contenedor"></div>
+<h3 class="mt-3">PRODUCTOS AGREGADOS</h3>
+<div id="carrito">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>NOMBRE</th>
+                <th>PRECIO</th>
+                <th>CANTIDAD</th>
+                <th>ELIMINAR</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
+</div>
+<script src="js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
